[workspace]
members = [
    "labs/core_bound/compiler_intrinsics_1",
    "labs/core_bound/compiler_intrinsics_2",
    "labs/core_bound/dep_chains_1",
    "labs/core_bound/function_inlining_1",
    "labs/core_bound/vectorization_1",
    "labs/core_bound/vectorization_2",
    "labs/memory_bound/data_packing",
    "labs/memory_bound/loop_interchange_1",
    "labs/memory_bound/loop_tiling",
]
