[package]
name = "function_inlining_1"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench_function_inlining_1"
harness = false

[dependencies]
libc = "0.2.131"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports", "real_blackbox", "cargo_bench_support"] }
